# phantom-pinpoint

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: examples.md  preregistration.md  theory.md
experiments/: 01_baseline.py  02_audience_effect.py  03_vague_vs_sharp.py  04_ablations.py  05_repeated_trigger.py  06_sensitivity_sweep.py  07_identifiability.py  09_location_decomposition.py  10_effect_sizes.py  _common.py
scripts/: reproduce_all.sh
src/phantom_pinpoint/: __init__.py  _logging.py  ablations.py  agents.py  cli.py  core.py  decomposition.py  effect_size.py  identifiability.py  sensitivity.py  simulation.py  statistics.py  visualization.py
tests/: conftest.py  test_agents.py  test_cli.py  test_core.py  test_decomposition.py  test_effect_size.py  test_identifiability.py  test_sensitivity.py  test_simulation.py  test_statistics.py  test_visualization.py
