[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "phantom-pinpoint"
version = "0.2.0"
description = "Agent-based simulation of the Phantom Pinpoint Effect: post-hoc specificity confabulation when an abstract goal region is grazed by a trigger."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "hinanohart", email = "255530825+hinanohart@users.noreply.github.com" }]
keywords = [
  "cognitive-science",
  "agent-based-model",
  "confabulation",
  "hindsight-bias",
  "signaling",
  "phantom-pinpoint",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "hypothesis>=6.100",
]

[project.scripts]
phantom-pinpoint = "phantom_pinpoint.cli:app"

[project.urls]
Homepage = "https://github.com/hinanohart/phantom-pinpoint"
Repository = "https://github.com/hinanohart/phantom-pinpoint"
Issues = "https://github.com/hinanohart/phantom-pinpoint/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom_pinpoint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
# E501 line length, N806 uppercase-variable (e.g. ``E`` for the trigger and
# ``G`` for the goal region are deliberate math notation), RUF001/002/003
# Unicode-confusables (we use σ, μ, β, γ, α, →, –  on purpose).
ignore = ["E501", "N806", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N803", "N806"]
# Experiment scripts intentionally start with two-digit ordinals (01_, 02_)
# for ordered execution; ``B008`` is unavoidable when using typer; F841 false
# positive on intentionally-prepared baseline arrays kept for clarity.
"experiments/**" = ["N803", "N806", "N999", "T201", "B008", "F841"]
"src/phantom_pinpoint/cli.py" = ["B008", "UP007"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/phantom_pinpoint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = ["error::DeprecationWarning"]
